# 1-semester

./: README.md
10/: CMakeLists.txt
11/: CMakeLists.txt  main.cpp
2/: CMakeLists.txt
4.2/: CMakeLists.txt
4.3/: CMakeLists.txt
5.2/: CMakeLists.txt  main.cpp
8/: CMakeLists.txt
9/: CMakeLists.txt  main.cpp
project/: CMakeLists.txt  Readme.md  Solar.cpp  Solar.hpp  main.cpp
z-1/: main.cpp
z-2/: CMakeLists.txt  main.cpp
z-3/: main.cpp
z-5/: main.cpp
z-6/: main.cpp
